[gd_scene load_steps=30 format=3 uid="uid://ce0mdojao4bet"]

[ext_resource type="Script" path="res://scripts/viewer.gd" id="1_yr1bk"]
[ext_resource type="PackedScene" uid="uid://wqdq214fan6x" path="res://scenes/fiszka.tscn" id="2_ptgkt"]
[ext_resource type="FontFile" uid="uid://bley2lrblcl16" path="res://fonts/Montserrat-Medium.ttf" id="3_nybe1"]
[ext_resource type="Texture2D" uid="uid://bubvq1a32k1op" path="res://icons/prev.svg" id="4_mci7a"]
[ext_resource type="Texture2D" uid="uid://d2lefa78exm7r" path="res://icons/next.svg" id="5_ovpux"]
[ext_resource type="Script" path="res://scripts/font_scale.gd" id="7_ri3m4"]
[ext_resource type="Texture2D" uid="uid://d3f66xkd2n3uv" path="res://icons/close.svg" id="8_4cy82"]

[sub_resource type="InputEventKey" id="InputEventKey_u7cbq"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_xrn7k"]
events = [SubResource("InputEventKey_u7cbq")]

[sub_resource type="InputEventKey" id="InputEventKey_u2jfr"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="InputEventKey" id="InputEventKey_juraa"]
device = -1
keycode = 4194439
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_m5u3o"]
events = [SubResource("InputEventKey_u2jfr"), SubResource("InputEventKey_juraa")]

[sub_resource type="InputEventKey" id="InputEventKey_4t3iy"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="InputEventKey" id="InputEventKey_m6pgj"]
device = -1
keycode = 4194440
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_r3at8"]
events = [SubResource("InputEventKey_4t3iy"), SubResource("InputEventKey_m6pgj")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ofho3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tixgg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ehwmi"]

[sub_resource type="InputEventKey" id="InputEventKey_mdc0k"]
device = -1
keycode = 4194319

[sub_resource type="InputEventKey" id="InputEventKey_gstxx"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="Shortcut" id="Shortcut_bjl3e"]
events = [SubResource("InputEventKey_mdc0k"), SubResource("InputEventKey_gstxx")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mwru0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_36uj3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1kydr"]

[sub_resource type="InputEventKey" id="InputEventKey_rrmvl"]
device = -1
keycode = 4194321

[sub_resource type="InputEventKey" id="InputEventKey_rj41v"]
device = -1
keycode = 68
unicode = 100

[sub_resource type="Shortcut" id="Shortcut_e5cu3"]
events = [SubResource("InputEventKey_rrmvl"), SubResource("InputEventKey_rj41v")]

[sub_resource type="InputEventKey" id="InputEventKey_qxxkh"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_46hhf"]
events = [SubResource("InputEventKey_qxxkh")]

[node name="UI" type="Control" node_paths=PackedStringArray("open_dialog", "fiszka", "counter", "prev", "next")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yr1bk")
main_scene_path = "res://scenes/main.tscn"
open_dialog = NodePath("OpenDialog")
fiszka = NodePath("Fiszka")
counter = NodePath("Counter")
prev = NodePath("Prev/PrevButton")
next = NodePath("Next/NextButton")

[node name="OpenDialog" type="FileDialog" parent="."]
title = "Otwórz plik"
initial_position = 1
size = Vector2i(849, 472)
ok_button_text = "Open"
cancel_button_text = "Anuluj"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.fk ; Plik FiszKit")
use_native_dialog = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="Fiszka" parent="." instance=ExtResource("2_ptgkt")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="Counter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 27.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 44
text = "1/1"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_ri3m4")

[node name="FlipHint" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -80.0
offset_right = 128.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Key" type="Label" parent="FlipHint"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -14.0
offset_right = -45.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nybe1")
text = "Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Action" type="Label" parent="FlipHint"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 104.0
offset_top = 6.0
offset_right = 248.0
offset_bottom = -6.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nybe1")
text = "Odwróć"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Border" type="ColorRect" parent="FlipHint"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = 2.0
offset_right = -31.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="FlipButton" type="Button" parent="FlipHint"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
shortcut = SubResource("Shortcut_xrn7k")

[node name="KnowHint" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -416.0
offset_top = -80.0
offset_right = -160.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0.486275, 0.0235294, 1)

[node name="Key" type="Label" parent="KnowHint"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = 88.0
offset_bottom = -6.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nybe1")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Action" type="Label" parent="KnowHint"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 104.0
offset_top = 6.0
offset_right = 248.0
offset_bottom = -6.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nybe1")
text = "Umiem"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Border" type="ColorRect" parent="KnowHint"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = 2.0
offset_right = -31.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="KnowButton" type="Button" parent="KnowHint"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
shortcut = SubResource("Shortcut_m5u3o")

[node name="NotKnowHint" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 160.0
offset_top = -80.0
offset_right = 416.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.486275, 0, 0, 1)

[node name="Key" type="Label" parent="NotKnowHint"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = 88.0
offset_bottom = -6.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nybe1")
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Action" type="Label" parent="NotKnowHint"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 104.0
offset_top = 6.0
offset_right = 248.0
offset_bottom = -6.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nybe1")
text = "Nie umiem"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Border" type="ColorRect" parent="NotKnowHint"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = 2.0
offset_right = -31.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="NotKnowButton" type="Button" parent="NotKnowHint"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
shortcut = SubResource("Shortcut_r3at8")

[node name="Prev" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 32.0
grow_vertical = 2
texture = ExtResource("4_mci7a")

[node name="PrevButton" type="Button" parent="Prev"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ofho3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tixgg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ehwmi")
disabled = true
shortcut = SubResource("Shortcut_bjl3e")

[node name="Next" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -32.0
offset_right = -48.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_ovpux")

[node name="NextButton" type="Button" parent="Next"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_mwru0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_36uj3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1kydr")
disabled = true
shortcut = SubResource("Shortcut_e5cu3")

[node name="Close" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -333.0
offset_right = -48.0
offset_bottom = -269.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("8_4cy82")

[node name="CloseButton" type="Button" parent="Close"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_mwru0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_36uj3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1kydr")
shortcut = SubResource("Shortcut_46hhf")

[connection signal="file_selected" from="OpenDialog" to="." method="_on_open_dialog_file_selected"]
[connection signal="pressed" from="FlipHint/FlipButton" to="." method="_on_flip_button_pressed"]
[connection signal="pressed" from="Prev/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="Next/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Close/CloseButton" to="." method="_on_close_button_pressed"]
